--- a/styles/player-sheet.less
+++ b/styles/player-sheet.less
@@ -428,6 +428,7 @@
           width: 100%;
           min-height: 150px;
           border: none;
+          margin: 0;
         }
       }
     }
